--- a/menu.html
+++ b/menu.html
@@ -77,7 +77,18 @@
             <img src="./menu/mobile-menu/5.jpg" alt="">
         </div>
     </div>
-    </main>
+   
+    <footer>
+
+        <ul>
+            <li>Mahatta Sweets &copy; 2020</li>
+            <li><a href="https://www.facebook.com/mahattasweets2" target="_blank"><i
+                        class="fab fa-facebook-square fa-2x"></i></a></li>
+            <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank"><i
+                        class="fab fa-instagram fa-2x"></i></a></li>
+
+        </ul>
+    </footer>  </main>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js">
