--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         <!-- <img src="./mahatta-sweets-1.png" alt="" width="150px" height="150px"> -->
         <a class="logo animated fadeIn delay-1s" href="index.html">Mahatta Sweets</a>
         <ul class="animated fadeIn delay-1s">
+            <li> <a href="menu.html">Menu</a></li>
             <li><a href="https://www.facebook.com/mahattasweets2" target="_blank"><i
                         class="fab fa-facebook-square fa-2x"></i></a></li>
             <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank"><i
                         class="fab fa-instagram fa-2x"></i></a></li>
-            <li> <a href="menu.html">Our Menu</a> </li>
+            
         </ul>
     </nav>
 
@@ -33,9 +34,16 @@
     <section class="showcase">
 
         <p class="animated fadeInUp">Home Of Sweets <br><span>In the heart of Sharjah</span></p>
+        <ul class="showcase-list animated fadeInUp">
+            <li>Waffles</li>
+            <li>Crepes</li>
+            <li>Brownies</li>
+            <li>Drinks</li>
+            <li>And More.. </li>
+        </ul>
         <div class="call-to-action animated fadeInUp">
             <a href="#location" class="btn"><i class="fas fa-map-marker-alt"></i>Get Location</a>
-            <a href="tel:+971555826667" class="btn"><i class="fas fa-phone-alt"></i>Call US</a>
+            <a href="tel:+971555826667" class="btn"><i class="fas fa-phone-alt"></i>Call</a>
         </div>
 
     </section>
