--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- <img src="./mahatta-sweets-1.png" alt="" width="150px" height="150px"> -->
         <a class="logo animated fadeIn delay-1s" href="index.html">Mahatta Sweets</a>
         <ul class="animated fadeIn delay-1s">
-            <li> <a href="menu.html">Menu</a></li>
+            <li class="menu-link"> <a href="menu.html">Menu</a></li>
             <li><a href="https://www.facebook.com/mahattasweets2" target="_blank"><i
                         class="fab fa-facebook-square fa-2x"></i></a></li>
             <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank"><i
