changed the logo

--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
 
 <body id="menu-page">
     <nav>
-        <a class="logo animated fadeIn delay-1s" href="index.html">Mahatta Sweets</a>
+        <a class="logo animated fadeIn delay-1s" href="index.html"><img class="logo" src="./mahatta-sweets-1.png" alt=""></a>
         <ul class="animated fadeIn delay-1s">
             <li><a href="https://www.facebook.com/mahattasweets2" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a></li>
             <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
