--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
+    <div class="intro">
     <nav>
-        <!-- <img src="./mahatta-sweets-1.png" alt="" width="150px" height="150px"> -->
         <a class="logo animated fadeIn delay-1s" href="index.html"><img class="logo"src="./mahatta-sweets-1.png" alt=""></a>
         <ul class="animated fadeIn delay-1s">
             <li class="menu-link"> <a href="menu.html">Menu</a></li>
@@ -46,7 +46,7 @@
             <a href="tel:+971555826667" class="btn"><i class="fas fa-phone-alt"></i>Call</a>
         </div>
 
-    </section>
+    </section> </div>
     <div class="home-grid">
         <div>
             <i class="fas fa-map-marked fa-2x"></i>
