--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body>
     <div class="intro">
     <nav>
-        <a class="logo animated fadeIn delay-1s" href="index.html"><img class="logo"src="./mahatta-sweets-1.png" alt=""></a>
+        <a class="logo animated fadeIn delay-1s" href="index.html"><img class="logo" src="./mahatta-sweets-1.png" alt="logo"> </a>
         <ul class="animated fadeIn delay-1s">
             <li class="menu-link"> <a href="menu.html">Menu</a></li>
-            <li><a href="https://www.facebook.com/mahattasweets2" target="_blank"><i
+            <li><a href="https://www.facebook.com/mahattasweets2" target="_blank" rel="noopener" name="facebook page"><i
                         class="fab fa-facebook-square fa-2x"></i></a></li>
-            <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank"><i
+            <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank" rel="noopener" name="instagram page"><i
                         class="fab fa-instagram fa-2x"></i></a></li>
             
         </ul>
@@ -73,7 +73,7 @@
 
     <div class="location" id="location">
         <p>Our Location</p>
-        <iframe data-aos="fade-up"
+        <iframe data-aos="fade-up" title="map location"
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14420.851105261796!2d55.3879518!3d25.3641844!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa69ab2ffb10fd5e2!2sMahatta%20Sweets!5e0!3m2!1sen!2sly!4v1582303056985!5m2!1sen!2sly"
             frameborder="0" allowfullscreen=""></iframe>
 
@@ -85,9 +85,9 @@
 
         <ul>
             <li>Mahatta Sweets &copy; 2020</li>
-            <li><a href="https://www.facebook.com/mahattasweets2" target="_blank"><i
+            <li><a href="https://www.facebook.com/mahattasweets2" target="_blank" name="facebook page"><i
                         class="fab fa-facebook-square fa-2x"></i></a></li>
-            <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank"><i
+            <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank" name="instagram "><i
                         class="fab fa-instagram fa-2x"></i></a></li>
 
         </ul>
