--- a/menu.html
+++ b/menu.html
@@ -15,81 +15,86 @@
 
 <body id="menu-page">
     <nav>
-        <a class="logo animated fadeIn delay-1s" href="index.html"><img class="logo" src="./mahatta-sweets-1.png" alt=""></a>
+        <a class="logo animated fadeIn delay-1s" href="index.html"><img class="logo" src="./mahatta-sweets-1.png"
+                alt="logo"></a>
         <ul class="animated fadeIn delay-1s">
             <li><a href="./index.html"><i class="fas fa-home fa-2x"></i></a></li>
-            <li><a href="https://www.facebook.com/mahattasweets2" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-            <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
-            
-        </ul>
-    </nav>
-    <main>
-    <div class="gallery">
-        <div>
-            <img src="./menu/1.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/2.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/3.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/4.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/5.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/6.jpg" alt="">
-        </div>
-    </div>
-    <div class="mobile-gallery">
-        <div>
-            <img src="./menu/mobile-menu/0.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/mobile-menu/1.jpg" alt=""> </div>
-        <div>
-            <img src="./menu/mobile-menu/2.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/mobile-menu/3.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/mobile-menu/4.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/mobile-menu/5.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/mobile-menu/6.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/mobile-menu/7.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/mobile-menu/8.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/mobile-menu/9.jpg" alt="">
-        </div>
-        <div>
-            <img src="./menu/mobile-menu/5.jpg" alt="">
-        </div>
-    </div>
-   
-    <footer>
-
-        <ul>
-            <li>Mahatta Sweets &copy; 2020</li>
-            <li><a href="https://www.facebook.com/mahattasweets2" target="_blank"><i
+            <li><a href="https://www.facebook.com/mahattasweets2" target="_blank" rel="noopener"><i
                         class="fab fa-facebook-square fa-2x"></i></a></li>
-            <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank"><i
+            <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank" rel="noopener"><i
                         class="fab fa-instagram fa-2x"></i></a></li>
 
         </ul>
-    </footer>  </main>
+    </nav>
+    <main>
+        <div class="gallery">
+            <div>
+                <img src="./menu/1.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/2.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/3.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/4.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/5.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/6.jpg" alt="menu-page">
+            </div>
+        </div>
+        <div class="mobile-gallery">
+            <div>
+                <img src="./menu/mobile-menu/0.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/1.jpg" alt="menu-page"> 
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/2.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/3.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/4.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/5.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/6.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/7.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/8.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/9.jpg" alt="menu-page">
+            </div>
+            <div>
+                <img src="./menu/mobile-menu/5.jpg" alt="menu-page">
+            </div>
+        </div>
+
+        <footer>
+
+            <ul>
+                <li>Mahatta Sweets &copy; 2020</li>
+                <li><a href="https://www.facebook.com/mahattasweets2" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook-square fa-2x"></i></a></li>
+                <li><a href="https://www.instagram.com/mahatta_sweets/" target="_blank" rel="noopener"><i
+                            class="fab fa-instagram fa-2x"></i></a></li>
+
+            </ul>
+        </footer>
+    </main>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js">
@@ -100,8 +105,8 @@
             $('.gallery').slick({
                 cssEase: 'ease-in-out',
                 dots: false,
-                fade: true, 
-                autoPlay:true
+                fade: true,
+                autoPlay: true
 
 
             });
@@ -111,8 +116,8 @@
                 cssEase: 'ease-in-out',
                 fade: true,
                 mobileFirst: true,
-                autoPlay:true,
-                speed:500
+                autoPlay: true,
+                speed: 500
             })
         })
     </script>
